--- a/1 Spring Boot/mobilele/src/main/resources/application.yml
+++ b/1 Spring Boot/mobilele/src/main/resources/application.yml
@@ -1,14 +1,18 @@
 spring:
-    datasource:
-        driverClassName: com.mysql.cj.jdbc.Driver
-        password: 12345
-        url: jdbc:mysql://localhost:3306/spring_data_lab_db?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
-        username: root
-    jpa:
-        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-        hibernate:
-            ddl-auto: create-drop
-        open-in-view: false
-        properties:
-            hibernate:
-                format_sql: true
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    password: 12345
+    url: jdbc:mysql://localhost:3306/spring_data_lab_db?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
+    username: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+      ddl-auto: create-drop
+    open-in-view: false
+    properties:
+      hibernate:
+        format_sql: true
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
